<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_margin="8dp"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardCornerRadius="8dp"
    app:cardElevation="0dp"
    android:id="@+id/special_CARD_hotel"
    app:strokeColor="@android:color/transparent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/special_hotel_IMG"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/black"
            android:scaleType="centerCrop"
            android:src="@drawable/unavailable_photo"
            app:shapeAppearanceOverlay="@style/roundedCorners" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/special_discount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/special_hotel_IMG"
            android:layout_alignTop="@id/special_hotel_IMG"
            android:layout_margin="4dp"
            android:background="@color/grayish"
            android:padding="2dp"
            android:text="@string/_20_off"
            android:textColor="#FFFFFF" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/special_hotel_favorite"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignTop="@id/special_hotel_IMG"
            android:layout_alignEnd="@id/special_hotel_IMG"
            android:layout_margin="4dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/outline_white_heart" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/special_hotel_IMG"
            android:orientation="vertical"
            android:padding="8dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/special_hotel_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/presoton_hotel"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/special_hotel_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/location_icon"
                android:drawablePadding="2dp"
                android:text="@string/dhaka_bangladesh"
                android:textSize="12sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/special_hotel_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/_200_00"
                android:textSize="14sp"
                android:textStyle="bold" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>