<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/hotel_CARD_data"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:elevation="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp"
        android:clickable="true"
        android:focusable="true"
        android:backgroundTint="@color/white"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/hotel_SHP_IMG"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:scaleType="centerCrop" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/hotel_TXT_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:maxLines="2"
                android:ellipsize="end"
                android:text="@string/hotel_s_name"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/hotel_TXT_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:drawableLeft="@drawable/location_icon"
                android:paddingBottom="4dp"
                android:textSize="14sp"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/location"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/hotel_TXT_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:paddingBottom="8dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/hotel_s_price"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</RelativeLayout>