<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/scrollview_reserve"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".Activities.ReserveHotelActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/back_button_reserve"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/back_icon"
            android:background="@color/white"
            android:layout_marginTop="5dp">

        </androidx.appcompat.widget.AppCompatImageButton>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_marginTop="120dp"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:gravity="center_vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/reserve_hotel_city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Sylhet"
                android:textSize="18sp"
                android:textColor="#4A4A4A"
                android:layout_marginLeft="7dp"/>

            <View
                android:layout_width="1dp"
                android:layout_height="24dp"
                android:background="#4A4A4A"
                android:layout_marginHorizontal="8dp"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/check_in_and_out_reserve"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="2 PM To 5 AM"
                android:textSize="18sp"
                android:textColor="#4A4A4A"
                android:gravity="center"/>

            <View
                android:layout_width="1dp"
                android:layout_height="24dp"
                android:background="#4A4A4A"
                android:layout_marginHorizontal="8dp"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/num_guests_reserve"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="5 Guests"
                android:textSize="18sp"
                android:textColor="#4A4A4A"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="60dp"
            android:layout_centerHorizontal="true"
            android:gravity="center_vertical"
            android:padding="8dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/check_in_date_reserve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="9 Sep"
                android:textSize="18sp"
                android:textColor="#000000"
                android:textStyle="bold"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:src="@drawable/clock_arrow_img"
                android:layout_marginHorizontal="8dp"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/check_out_date_reserve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10 Sep"
                android:textSize="18sp"
                android:textColor="#000000"
                android:textStyle="bold"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/book_next_vacay"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:text="@string/book_your_next_vacation"
            android:layout_marginTop="10dp"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/LLC_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginVertical="210dp"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rooms"
                android:textStyle="bold"
                android:layout_marginBottom="4dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reserve_num_room"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                app:shapeAppearanceOverlay="@style/roundedTextInputLayout"
                android:layout_marginBottom="16dp"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/blueish"
                app:hintTextColor="@color/black"
                android:hint="Num Of Rooms">

                <AutoCompleteTextView
                    android:id="@+id/autoComplete_num_room"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:dropDownHeight="150dp"
                    android:inputType="none"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Special Requests"
                android:textStyle="bold"
                android:layout_marginBottom="4dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reserve_specialReq_txt"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/blueish"
                app:hintTextColor="@color/black"
                app:shapeAppearanceOverlay="@style/roundedTextInputLayout"
                android:layout_marginBottom="16dp"
                android:hint="@string/special_requests">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reserve_txt_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minLines="4"
                    android:maxLines="10"
                    android:gravity="top|start"
                    android:scrollbars="vertical"
                    android:inputType="textMultiLine"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add a review if you visited before"
                android:textStyle="bold"
                android:layout_marginBottom="4dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reserve_user_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/blueish"
                app:hintTextColor="@color/blueish"
                app:boxBackgroundColor="@color/white"
                app:shapeAppearanceOverlay="@style/roundedTextInputLayout"
                android:hint="User Review">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_user_review_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:minLines="1"
                    android:maxLines="5"
                    android:scrollbars="vertical"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Coupon code"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="4dp"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/coupon_code_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:boxBackgroundColor="@color/white"
                    app:boxStrokeColor="@color/blueish"
                    app:hintTextColor="@color/blueish"
                    app:shapeAppearanceOverlay="@style/roundedTextInputLayout"
                    android:hint="Enter coupon code">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_coupon_code_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/apply_coupon_button_reserve"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="Apply"
                    android:textColor="@color/white"
                    app:backgroundTint="@color/blueish" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>



        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/price_details_reserve"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="680dp"
            android:orientation="vertical"
            android:padding="16dp">


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/room_X_night_reserve"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="1 room X 1 night"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_gray_background"
                android:orientation="vertical"
                android:padding="16dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Price" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/original_price_reserve"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="$200.00" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Discount" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/discount_price_reserve"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="$0.00" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Tax" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tax_price_reserve"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="$25.00" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Total Price"
                        android:textStyle="bold" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/total_price_reserve"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="$185.00"
                        android:textStyle="bold" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/reserve_confirm"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/confirm_reservation"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/blueish"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </RelativeLayout>




</ScrollView>